--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-LINKEDIN_EMAIL=saymanlal97@gmail.com
-LINKEDIN_PASSWORD=17072006
-TWITTER_API_KEY=8qAzuzrYbsg2TeNPwUnGfZhac
-TWITTER_API_SECRET=C11GdS9bz28XfegmNT6k3oTByU4P3S9tnyFRAATYFXcq2fd0ua
-TWITTER_ACCESS_TOKEN=1889783437873004544-8I7JdIb1lsqm58MyxuxDAtsXDqMJAP
-TWITTER_ACCESS_SECRET=ugOAyP0RuuJjAe013mt1ouQGusjQcwJbM412H8lLT7rST
-LINKEDIN_PROFILE_URL=https://www.linkedin.com/in/saymanlal/
+LINKEDIN_EMAIL=
+LINKEDIN_PASSWORD=
+TWITTER_API_KEY=
+TWITTER_API_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
+LINKEDIN_PROFILE_URL=
